--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.19.2",
     "gravatar-url": "^3.1.0",
     "jwt-decode": "^2.2.0",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
